@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1532: Add solve() function to the Scala DSL (ssc)
+
   MAHOUT-1548: Fix broken links in quickstart webpage (Andrew Palumbo via ssc)
 
   MAHOUT-1428: Recommending already consumed items (Dodi Hakim via ssc)
